@startuml
'https://plantuml.com/sequence-diagram
class Minecraft{
}
abstract class Objeto

class Personaje{
    - vida: int
    - nombre: String
    + crearEspada(espada:Espada)
    + hacerDaño(personaje2: Personaje);
}
class Espada{
    - cantidadDaño: int
    + golpear()
}
class EspadaDeMadera{
    + golpear(personaje2: Personaje)): int
}
class EspadaDeDiamante{
    +golpear(personaje2: Personaje)): int
}
Minecraft --> "*" Personaje: personajes
Personaje --> "1...9" Objeto: objetos
Espada <|- Objeto
EspadaDeDiamante <|- Espada
EspadaDeMadera <|- Espada
@enduml